@@ -22,6 +22,8 @@ Cortana Updates (for scripters)
 - added shell_read event which fires when a shell s_cmd comes
   back with intermediate output.
 - fixed a potential deadlock with &open_console_tab
+- scripts now have the ability to redefine the max size of a 
+  workspace: db_workspace(%(size => #####));
 
 2 Aug 12 (tested again msf r15698)
 --------
